workload/vault/templates/vault-unseal.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: vault-unseal-a
spec:
  containers:
  - name: vault-unseal
    image: ghcr.io/lrstanley/vault-unseal:0.2.4
---
apiVersion: v1
kind: Pod
metadata:
  name: vault-unseal-b
spec:
  containers:
  - name: vault-unseal
    image: ghcr.io/lrstanley/vault-unseal:0.2.4
---
apiVersion: v1
kind: Pod
metadata:
  name: vault-unseal-c
spec:
  containers:
  - name: vault-unseal
    image: ghcr.io/lrstanley/vault-unseal:0.2.4
